# solactivity-anchor

./: Cargo.toml  LICENSE  README.md  idl.json
client/: client.ts  idl.ts
src/: constants.rs  errors.rs  lib.rs
src/instructions/: mod.rs  proposal.rs  vote.rs
src/state/: proposal.rs  vote.rs
